--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: Perform update and upgrade of all packages
+- name: Update and upgrade all packages and dependencies
   become: true
-  ansible.builtin.apt:
+  apt:
     autoclean: true
     cache_valid_time: 3600
     update_cache: true
