--- a/inventories/production/group_vars/k3s_cluster.yml
+++ b/inventories/production/group_vars/k3s_cluster.yml
@@ -2,5 +2,5 @@
 k3s_version: v1.26.3+k3s1
 systemd_dir: /etc/systemd/system
 main_ip: 192.168.1.3
-extra_server_args: "--disable=servicelb,traefik"
+extra_server_args: "--disable=servicelb --disable=traefik"
 extra_agent_args: ""
