feat: specify become to true when needed

--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Update and upgrade all packages and dependencies
   become: true
-  apt:
+  ansible.builtin.apt:
     autoclean: true
     cache_valid_time: 3600
     update_cache: true
