--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install tmux package
-  apt:
+  become: true
+  ansible.builtin.apt:
     name: tmux
     state: present
     update_cache: yes
