--- a/roles/btrfs/tasks/main.yml
+++ b/roles/btrfs/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install btrfs-progs package
-  apt:
+  become: true
+  ansible.builtin.apt:
     name: btrfs-progs
     state: present
     update_cache: yes
