--- a/roles/log2ram/tasks/main.yml
+++ b/roles/log2ram/tasks/main.yml
@@ -1,25 +1,29 @@
 ---
 - name: Add specified repository into sources list
-  apt_repository:
+  become: true
+  ansible.builtin.apt_repository:
     repo: deb [signed-by=/usr/share/keyrings/azlux-archive-keyring.gpg] http://packages.azlux.fr/debian/ bullseye main
     state: present
     filename: azlux
     update_cache: false
 
 - name: Add an Apt signing key to a specific keyring file
-  apt_key:
+  become: true
+  ansible.builtin.apt_key:
     url: https://azlux.fr/repo.gpg
     keyring: /usr/share/keyrings/azlux-archive-keyring.gpg
 
 - name: Install log2ram package
-  apt:
+  become: true
+  ansible.builtin.apt:
     name: log2ram
     state: present
     update_cache: yes
   notify: reboot
 
 - name: Config the size the log folder will reserve into the RAM
-  lineinfile:
+  become: true
+  ansible.builtin.lineinfile:
     path: /etc/log2ram.conf
     regexp: '^SIZE='
     line: 'SIZE={{ size }}'
