--- a/roles/ssh/handlers/main.yml
+++ b/roles/ssh/handlers/main.yml
@@ -1,7 +1,8 @@
 ---
 - name: Restart the sshd service
   become: true
-  ansible.builtin.service:
+  ansible.builtin.systemd_service:
     name: sshd
     state: restarted
+    daemon_reload: true
 
