fix: Grant root privilege to configure sshd

--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: Disable password authentication
+  become: true
   ansible.builtin.lineinfile:
     dest: /etc/ssh/sshd_config
     regexp: '^#?PasswordAuthentication'
