feat: refactor ansible project

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory      = ./inventory/hosts
+inventory      = ./inventory/hosts.yml
 roles_path     = ./roles
 playbooks      = ./playbooks
 
