--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -1,8 +1,6 @@
 ---
 - name: Install tmux package
-  become: true
   ansible.builtin.apt:
     name: tmux
     state: present
-    update_cache: yes
-
+    update_cache: true
