--- a/roles/lm-sensors/tasks/main.yml
+++ b/roles/lm-sensors/tasks/main.yml
@@ -5,7 +5,7 @@
     state: present
     update_cache: true
 
-- name: Add the drivetemp kernel module
+- name: Load the drivetemp kernel module
   community.general.modprobe:
     name: drivetemp
     state: present
