--- a/playbooks/setup.yml
+++ b/playbooks/setup.yml
@@ -3,7 +3,13 @@
   hosts: all
   become: true
   roles:
-    - role: iscsi
+    - role: iscsi/initiator
     - role: lm-sensors
     - role: log2ram
     - role: sysstat
+
+- name: Configure storage node
+  hosts: raspberrypi-03
+  become: true
+  roles:
+    - role: iscsi/target
