fix: restart k3s service when upgrading

--- a/roles/k3s/server/tasks/main.yml
+++ b/roles/k3s/server/tasks/main.yml
@@ -73,7 +73,7 @@
       ansible.builtin.systemd:
         name: k3s
         daemon_reload: true
-        state: started
+        state: restarted
         enabled: true
 
     - name: Check whether kubectl is installed on control node
