fix: suppress python interpreter warning

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-inventory      = ./inventory/hosts.yml
-roles_path     = ./roles 
-
+inventory          = ./inventory/hosts.yml
+roles_path         = ./roles
+interpreter_python = auto_silent
